--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe Game</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="score">
+            <span class="player1Score"></span>
+            <span class="player2Score"></span>
+        </div>
+        <div class="gameField">
+            <div class="cells">
+                <span class="cell"></span>               
+                <span class="cell"></span>               
+                <span class="cell"></span>               
+            </div>
+            <div class="cells">
+                <span class="cell"></span>               
+                <span class="cell"></span>               
+                <span class="cell"></span>               
+            </div>
+            <div class="cells">
+                <span class="cell"></span>               
+                <span class="cell"></span>               
+                <span class="cell"></span>               
+            </div>
+        </div>
+        <div class="newGame">
+            <button class="restart">Restart</button>
+        </div>
+    </div>
 </body>
 </html>
